# simple-ffmpeg-mp3-player

./: CMakeLists.txt  main.cpp
